kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __ServiceName__
  labels:
    app: __ServiceName__
spec:
  ports:
  - port: __ServicePort__
    targetPort: __AppPort__
    protocol: TCP
    name: http2
  selector:
    app: __ServiceName__
