kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: __ServiceName__
  name: __ServiceName__
spec:
  rules:
  - host: __ServiceHost__
    http:
      paths:
      - path: /
        backend:
          serviceName: __ServiceName__
          servicePort: 80
